fix: profile alignment styles

--- a/src/components/Icon/ChevronRightCircleOutline.css
+++ b/src/components/Icon/ChevronRightCircleOutline.css
@@ -1,6 +1,6 @@
 .ChevronRightCircleOutline__FixedSize {
-  min-width: 32px;
-  max-width: 32px;
+  min-width: 24px;
+  max-width: 24px;
 }
 
 g.ChevronRightCircleOutline__Circle {
